Changes to be committed: 	modified:   unsupervised.ipynb

--- a/unsupervised.ipynb
+++ b/unsupervised.ipynb
@@ -15,12 +15,7 @@
     "from sklearn.manifold import TSNE\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_score\n",
-    "from sklearn.metrics import pairwise_distances\n",
-    "import smtplib\n",
-    "import schedule\n",
-    "import time\n",
-    "from email.mime.multipart import MIMEMultipart\n",
-    "from email.mime.text import MIMEText\n"
+    "from sklearn.metrics import pairwise_distances"
    ]
   },
   {
